--- a/Website/themes/MattOneColumn/_Layout.cshtml
+++ b/Website/themes/MattOneColumn/_Layout.cshtml
@@ -77,7 +77,7 @@
         }
         <span>
             Copyright &copy; @DateTime.Now.Year
-            <a href="http://madskristensen.net" itemprop="url name">Mads Kristensen</a>
+            <a href="http://matt-roberts.me" itemprop="url name">Matt Roberts</a>
         </span>
     </footer>
 
